plexer enhancements unrelated but toss them in why not